[gd_scene load_steps=26 format=3 uid="uid://xme6ovlyreju"]

[ext_resource type="PackedScene" uid="uid://cmgcl6nuih6jb" path="res://assets/models/fish/fish.glb" id="1_acrr1"]
[ext_resource type="Script" uid="uid://kkjkuo7566ao" path="res://scenes/entities/fish/big_fish.gd" id="1_p55er"]
[ext_resource type="Script" uid="uid://ck5cuh4s3y5mg" path="res://scenes/world/environment_test/fish_eye.gd" id="2_aykk1"]
[ext_resource type="Script" uid="uid://dxhjy8wd5ad5c" path="res://scripts/states/state_manager.gd" id="2_qn52e"]
[ext_resource type="PackedScene" uid="uid://desowp246qpu8" path="res://scenes/entities/fish/bullet.tscn" id="2_svlls"]
[ext_resource type="Texture2D" uid="uid://tjr74s7mqc82" path="res://scenes/entities/fish/fish_eye_jitter_noise.tres" id="3_aykk1"]
[ext_resource type="PackedScene" uid="uid://boab6cew1onfk" path="res://assets/models/fish/gun.glb" id="6_tcj6u"]
[ext_resource type="Texture2D" uid="uid://vld4r61hbgw0" path="res://assets/textures/flash.png" id="7_tcj6u"]

[sub_resource type="Gradient" id="Gradient_b4cmy"]
offsets = PackedFloat32Array(0.24723247, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tcj6u"]
gradient = SubResource("Gradient_b4cmy")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)
metadata/_snap_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_svlls"]
transparency = 1
shading_mode = 0
disable_fog = true
vertex_color_use_as_albedo = true
albedo_texture = SubResource("GradientTexture2D_tcj6u")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_35a62"]
_data = [Vector2(0.4736842, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_d7q3v"]
curve = SubResource("Curve_35a62")

[sub_resource type="Curve" id="Curve_asmty"]
_data = [Vector2(0, 0.39121032), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7ur82"]
curve = SubResource("Curve_asmty")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gqyxt"]
lifetime_randomness = 0.63
emission_shape = 1
emission_sphere_radius = 0.75
direction = Vector3(0, 0, 1)
spread = 79.48
initial_velocity_min = 0.25
initial_velocity_max = 2.95
scale_min = 480.88998
scale_max = 756.42
scale_curve = SubResource("CurveTexture_7ur82")
alpha_curve = SubResource("CurveTexture_d7q3v")

[sub_resource type="QuadMesh" id="QuadMesh_ly5rv"]

[sub_resource type="QuadMesh" id="QuadMesh_svlls"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_35a62"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
blend_mode = 1
shading_mode = 0
disable_ambient_light = true
disable_fog = true
albedo_color = Color(2.008, 2.008, 2.008, 1)
albedo_texture = ExtResource("7_tcj6u")
disable_receive_shadows = true

[sub_resource type="Animation" id="Animation_7muls"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_iumo6"]
resource_name = "spin"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.283]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_emit_revolutioned"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nj0d7"]
_data = {
&"RESET": SubResource("Animation_7muls"),
&"spin": SubResource("Animation_iumo6")
}

[sub_resource type="Animation" id="Animation_tcj6u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fish/GunContainer/gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.5),
"update": 0,
"values": [Vector3(0.09500014, 0.045083154, 0.60476106)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fish/GunContainer/gun:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.5),
"update": 0,
"values": [Vector3(-1.5707964, 0.08724923, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fish/GunContainer/gun:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.5),
"update": 0,
"values": [Vector3(0.034999993, 0.034999993, 0.034999974)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fish/GunContainer/gun/Cyllingedre:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, -5.2359877)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Fish/GunContainer/gun/Revolver_001:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Fish/GunContainer/gun/Smoke:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/Flash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/OmniLight3D:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/OmniLight3D:light_energy")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/OmniLight3D:light_indirect_energy")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/OmniLight3D:omni_attenuation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_b4cmy"]
resource_name = "kill"
length = 15.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fish/GunContainer/gun:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3.7, 5.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 1),
"update": 0,
"values": [Vector3(0.09500014, 0.045083154, 0.60476106), Vector3(-1.1167617, 0.3865148, 0.5133742), Vector3(-0.704743, 0.43505135, 0.51337445), Vector3(-0.684, -0.235, 2.196)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Fish/GunContainer/gun:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 3.7, 5.5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 1),
"update": 0,
"values": [Vector3(-1.5707964, 0.08724923, 0), Vector3(-0.8543996, -1.5604541, 0.70158285), Vector3(-1.3132731, -1.5707966, 0.6835935), Vector3(-0.05235988, 0.17802358, 0.60039324)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Fish/GunContainer/gun:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 3.7, 5.2, 6.2),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 0.18301095, 1),
"update": 0,
"values": [Vector3(0.034999993, 0.034999993, 0.034999974), Vector3(0.10499999, 0.10499997, 0.10499998), Vector3(0.105, 0.105, 0.105), Vector3(0.120000005, 0.120000005, 0.12), Vector3(0.12, 0.12, 0.2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Fish/GunContainer/gun/Revolver_001:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2, 3.4),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(-0.7644542, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Fish/GunContainer/gun/Cyllingedre:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 7.2, 7.4000006, 8.2, 8.4, 9.200001, 9.4, 10.200001, 10.4, 11.4, 13.4),
"transitions": PackedFloat32Array(1, -2, -2, -2, -2, -2, -2, -2, -2, 7.999997, -2),
"update": 0,
"values": [Vector3(0, 0, -5.2359877), Vector3(0, 0, -5.2359877), Vector3(0, 0, -4.1887903), Vector3(0, 0, -4.1887903), Vector3(0, 0, -3.1415927), Vector3(0, 0, -3.1415927), Vector3(0, 0, -2.0943952), Vector3(0, 0, -2.0943952), Vector3(0, 0, -1.0471976), Vector3(0, 0, -1.0471976), Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Fish/GunContainer/gun/Smoke:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(14),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/Flash:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 14, 14.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/OmniLight3D:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 14, 15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/OmniLight3D:light_energy")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(14, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16.0, 0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/OmniLight3D:light_indirect_energy")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(14, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [16.0, 0.0]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Fish/GunContainer/gun/MuzzlePoint/OmniLight3D:omni_attenuation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(14, 15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.2710000000000008, 0.0]
}
tracks/11/type = "method"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath(".")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(14),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot_bullet"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tcj6u"]
_data = {
&"RESET": SubResource("Animation_tcj6u"),
&"kill": SubResource("Animation_b4cmy")
}

[node name="BigFish" type="Node3D"]
transform = Transform3D(999.9999, 0, 0, 0, 999.9998, 0, 0, 0, 999.9999, 0, 0, 0)
script = ExtResource("1_p55er")
kill_turn_duration = 4.0
bullet_scene = ExtResource("2_svlls")

[node name="StateManager" type="Node" parent="."]
script = ExtResource("2_qn52e")
metadata/_custom_type_script = "uid://dxhjy8wd5ad5c"

[node name="Fish" parent="." instance=ExtResource("1_acrr1")]
transform = Transform3D(0.99999994, -1.4901163e-08, 0, 1.4901161e-08, 1, -1.3027009e-15, 1.9411757e-23, 1.302701e-15, 0.99999994, 0, 0, 0)

[node name="Cube" parent="Fish" index="0"]
transform = Transform3D(0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0, 0.9999999, 0, 0, 0)

[node name="Cube_003" parent="Fish/Empty" index="0"]
script = ExtResource("2_aykk1")
limit_angle = 0.5410520681182421
jitter_noise_texture = ExtResource("3_aykk1")
jitter_speed = 100.0
jitter_magnitude = 0.06

[node name="Cube_004" parent="Fish/Empty_001" index="0"]
script = ExtResource("2_aykk1")
limit_angle = 0.5410520681182421
jitter_noise_texture = ExtResource("3_aykk1")
jitter_speed = 100.0
jitter_magnitude = 0.06

[node name="GunContainer" type="Node3D" parent="Fish"]

[node name="gun" parent="Fish/GunContainer" instance=ExtResource("6_tcj6u")]
transform = Transform3D(0.03486686, -0.0030498493, -1.3331307e-10, 0, -1.5298983e-09, 0.034999974, -0.0030498493, -0.03486686, -1.524078e-09, 0.09500014, 0.045083154, 0.60476106)

[node name="Cyllingedre" parent="Fish/GunContainer/gun" index="1"]
transform = Transform3D(0.4999999, -0.86602545, 0, 0.86602545, 0.4999999, 0, 0, 0, 1, 0, -1.0436823, -0.33632463)

[node name="Smoke" type="GPUParticles3D" parent="Fish/GunContainer/gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5238994e-07, 0.29508093, 10.211397)
material_override = SubResource("StandardMaterial3D_svlls")
emitting = false
lifetime = 3.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_gqyxt")
draw_pass_1 = SubResource("QuadMesh_ly5rv")

[node name="MuzzlePoint" type="Node3D" parent="Fish/GunContainer/gun"]
unique_name_in_owner = true
transform = Transform3D(-1, -1.5577823e-08, -1.509958e-07, -1.5577823e-08, 1, -3.8944594e-09, 1.509958e-07, -3.894457e-09, -1, 0, 0.23082066, 10.380592)

[node name="Flash" type="MeshInstance3D" parent="Fish/GunContainer/gun/MuzzlePoint"]
transform = Transform3D(-15, 2.1932644e-06, 2.264937e-06, 2.1932644e-06, 15, 1.117586e-07, -2.264937e-06, 1.11758936e-07, -15, 0, 0, 0)
visible = false
mesh = SubResource("QuadMesh_svlls")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_35a62")

[node name="OmniLight3D" type="OmniLight3D" parent="Fish/GunContainer/gun/MuzzlePoint"]
transform = Transform3D(0.00054448453, -2.5920599e-11, 2.1827873e-11, 3.5015546e-11, 0.0005444845, -1.8189894e-11, -7.275958e-12, 5.456968e-12, 0.00032669073, 0, 0, 0.18500006)
visible = false
light_volumetric_fog_energy = 5.083
shadow_enabled = true
omni_range = 4096.0
omni_attenuation = 0.0
omni_shadow_mode = 0

[node name="SpinAnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Fish")
libraries = {
&"": SubResource("AnimationLibrary_nj0d7")
}
autoplay = "spin"
speed_scale = 0.004

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tcj6u")
}

[editable path="Fish"]
[editable path="Fish/GunContainer/gun"]
